# Vitriflow

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUIP_GAP_SETUP.md  README.md  environment.yml  environment_cp2k.yml  environment_quip.yml  environment_rhel8_mpi.yml  install_release.sh  pyproject.toml
demos/hardcarbon_gap20ugr/: README.md
docs/: amorphous_descriptor_provenance.md  graph_rule_robustness.md
potentials/: README.md
scripts/: build_lammps_quip.sh  build_lammps_quip_openblas.sh  check_gap20ugr_potential_files.py  check_vitriflow_install.py  extract_gap_xml_label.py  install_gap20ugr_potential_files.sh  smoke_test_gap20ugr_lammps.sh  stage_gap20ugr_potential_files.py
tests/: conftest.py  test_amorphous_detection.py  test_analysis_ensemble_cdfs.py  test_analysis_math_regressions.py  test_analysis_source_units.py  test_analysis_streaming_sidecars.py  test_ase_compat.py  test_atomic_json_hardening.py  test_autocore_lammps_rsq_grid.py  test_autocore_safe_preflight_order.py  test_autocore_source_equivalence_components.py  test_autotune_checkpointing.py  test_autotune_resume_hardening.py  test_autotune_resume_policy.py  test_buckingham_core_tabulation.py  test_combined_provenance_fixes.py  test_convergence_selection_status.py  test_coordination_defect_details.py  test_coordination_defects.py  test_cp2k_cell_opt_input.py  test_cp2k_data_dir_resolution.py  test_cp2k_exec_alias.py  test_cp2k_exec_prefix.py  test_cp2k_namespace_hardening.py  test_cp2k_restart_parser.py  test_cp2k_species_coverage_preflight.py  test_custom_schedule_stage4_regression.py  test_custom_schedule_workflow.py  test_cutoff_estimator.py  test_cutoff_scope_and_graph_cli.py  test_dft_opt_validation.py  test_dump_parser_hardening.py  test_elastic_analysis.py  test_elastic_fail_closed.py  test_engine_build_identity.py  test_engine_feature_gating.py  test_engine_neutral_csv_validation.py  test_ensemble_cdf_plotting.py  test_examples_yaml_parse.py  test_execution_physics_hardening.py  (+80 more)
validation/: README.md  VALIDATION_CONTRACTS.md  run_vitriflow_application_validation.sh
validation/configs/: al_fcc_3x3x3.data  minimal_metal_validation.yaml  si_cp2k_validation.yaml  sio2_bks_validation.yaml  (+1 more)
vitriflow/: __init__.py  __main__.py  cli.py  config.py  cp2k_driver.py  engine_identity.py  kim.py  lammps_input.py  lammps_units.py  parse.py  plotting.py  potential.py  runner.py  runtime_identity.py  structuregen.py  utils.py
(+81 files in other folders)
