[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitriflow"
version = "0.4.27.20"
description = "Automated melt-quench molecular dynamics workflows in LAMMPS with OpenKIM potentials"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "vitriflow contributors"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.5,<3",
  "PyYAML>=6.0",
  "ase>=3.22",
  "networkx>=3.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
materials = [
  "mp-api>=0.45",
]

dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.8",
  "types-PyYAML>=6.0",
]

[project.scripts]
vitriflow = "vitriflow.cli:main"

[tool.setuptools.package-data]
vitriflow = ["examples/*.yaml", "examples/*.data", "data/cp2k/*"]
