[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitriflow"
version = "0.4.37.0"
description = "Automated melt-quench and custom-stage molecular dynamics workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "vitriflow contributors"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.5,<3",
  "PyYAML>=6.0",
  "ase>=3.22",
  "networkx>=3.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
materials = [
  "mp-api>=0.45",
]

dev = [
  "pytest>=7.0",
  "tomli>=2.0; python_version < '3.11'",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.8",
  "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Olsson-Materials-Modelling/Vitriflow"
Repository = "https://github.com/Olsson-Materials-Modelling/Vitriflow"

[project.scripts]
vitriflow = "vitriflow.cli:main"

[tool.setuptools.package-data]
vitriflow = [
  "examples/minimal_metal.yaml",
  "examples/al_fcc_4x4x4.data",
  "examples/si_diamond_cp2k_toy.yaml",
  "examples/sio2_bks_zbl_smoke.yaml",
  "examples/sio2_bks_packmol_production.yaml",
  "examples/sio2_bks_cristobalite_production.yaml",
  "examples/sio2_kim_packmol_production.yaml",
  "examples/sio2_kim_cristobalite_production.yaml",
  "examples/hc_C_GAP20Ugr_hc_custom_demo.yaml",
  "data/cp2k/*",
]

[tool.setuptools.packages.find]
include = ["vitriflow*"]
exclude = ["demos*", "tests*", "validation*"]
